[LSP API] Userpreferences
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBK1G6
Signed-off-by: eraycinar <eray.cinar1@huawei.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -22,4 +22,5 @@ ets2panda_add_gtest(lsp_api_test CPP_SOURCES
     classifier_test.cpp
     cancellation_token_test.cpp
     get_span_of_enclosing_comment_test.cpp
+    user_preferences.cpp
 )
