--- a/ets2panda/public/CMakeLists.txt
+++ b/ets2panda/public/CMakeLists.txt
@@ -288,6 +288,7 @@ set (HEADERS_TO_BE_PARSED
     ${ES2PANDA_ROOT}/es2panda.h
     ${ES2PANDA_ROOT}/ast_verifier/ASTVerifier.h
     ${ES2PANDA_ROOT}/ast_verifier/checkContext.h
+    ${ES2PANDA_ROOT}/util/importPathManager.h
 )
 
 set (ES2PANDA_API_GENERATED
@@ -554,6 +555,7 @@ set (ES2PANDA_API_GENERATED
     ${LIBGEN_DIR}/gen/headers/parser/program/program.yaml
     ${LIBGEN_DIR}/gen/headers/ast_verifier/ASTVerifier.yaml
     ${LIBGEN_DIR}/gen/headers/ast_verifier/checkContext.yaml
+    ${LIBGEN_DIR}/gen/headers/util/importPathManager.yaml
     )
 
 
