Split tests into different gtests
Fixes #22879

Issue:#IBMWZR

Signed-off-by: Sergey Khil <khil.sergey@huawei.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -19,7 +19,14 @@ ets2panda_add_gtest(lsp_api_test_1 CPP_SOURCES
 ets2panda_add_gtest(lsp_api_test CPP_SOURCES
     quick_info_test.cpp
     lsp_api_test.cpp
-    classifier_test.cpp
     cancellation_token_test.cpp
     get_span_of_enclosing_comment_test.cpp
+)
+
+ets2panda_add_gtest(lsp_api_classifier_test CPP_SOURCES
+    classifier_test.cpp
+)
+
+ets2panda_add_gtest(lsp_api_diagnostics_test CPP_SOURCES
+    get_diagnostics.cpp
 )
