--- a/ets2panda/linter/package.json
+++ b/ets2panda/linter/package.json
@@ -30,6 +30,7 @@
     "test_regression_sdk": "npm run testrunner -- -d test/regression --sdk",
     "test_rules_sdk": "npm run testrunner -- -d test/rules --sdk",
     "test_ts_import_ets": "npm run testrunner -- -d test/ts_import_ets/ts --sdk --interop-mode",
+    "test_migration": "npm run testrunner -- -d test/migrate",
     "testrunner": "npm run compile && node build/testRunner/TestRunner.js",
     "update-tests": "node scripts/update-test-results.mjs test/main test/rules test/regression test/extended_features test/ts_import_ets/ts",
     "eslint-check": "npx eslint .",
