[LSP API] keywordCompletionData
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBLB91
Signed-off-by: cihatfurkaneken <cihat.furkan.eken3@huawei-partners.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -16,6 +16,7 @@ set(ES2PANDA_LSP_SRC
   ./src/classifier.cpp
   ./src/internal_api.cpp
   ./src/cancellation_token.cpp
+  ./src/completions.cpp
   ./src/quick_info.cpp
   ./src/references.cpp
 )
