--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -23,6 +23,7 @@ ets2panda_add_gtest(lsp_api_test CPP_SOURCES
     cancellation_token_test.cpp
     get_span_of_enclosing_comment_test.cpp
     user_preferences.cpp
+    keyword_completion_data_test.cpp
 )
 
 ets2panda_add_gtest(lsp_api_classifier_test CPP_SOURCES
