--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -21,24 +21,32 @@ if (ark_standalone_build) {
 
 config("libes2panda_lsp_config") {
   include_dirs = [ "include" ]
+  cflags_cc = [ "-Wno-return-type-c-linkage" ]
 }
 
 ohos_source_set("libes2panda_lsp_static") {
   sources = [
     "src/api.cpp",
+    "src/cancellation_token.cpp",
+    "src/classifier.cpp",
     "src/internal_api.cpp",
+    "src/quick_info.cpp",
+    "src/references.cpp",
   ]
   configs = [
-    ":libes2panda_lsp_config",
     "$ark_root/assembler:arkassembler_public_config",
     "$ark_root:ark_config",
     "../:libes2panda_public_config",
     "../:libes2panda_config",
     "$ark_root/libpandabase:arkbase_public_config",
     "$ark_root/libpandafile:arkfile_public_config",
+    ":libes2panda_lsp_config",
   ]
 
-  deps = [ "../:libes2panda_frontend_static" ]
+  deps = [
+    "../:libes2panda_frontend_static",
+    "../:libes2panda_public_frontend_static",
+  ]
 
   external_deps = [
     "runtime_core:libarktsbytecodeopt_package",
