Implement default TypeParam handling typealias
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBNPGT

Testing: pass all current test suites

Signed-off-by: Gergo Csizi <gergo.csizi@h-lab.eu>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1105,3 +1105,7 @@ semantic:
 - name: RTYPE_PARAM_COUNT_MISMATCH
   id: 274
   message: "Expected {} type arguments, got {} ."
+
+- name: EXPECTED_TYPE_ARGUMENTS
+  id: 275
+  message: "Expected at least {} type arguments, but got {}."
