Fix error message for readonly keyword
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBNPLG

Testing: pass all current test suites

Signed-off-by: Gergo Csizi <gergo.csizi@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -963,3 +963,7 @@ syntax:
 - name: REST_PARAM_LAST
   id: 238
   message: "Rest parameter should be the last one."
+
+- name: READONLY_TYPE_EXPECTED
+  id: 239
+  message: "Readonly<T> utility type expected but readonly<T> found."
