Title: getStringLiteralCompletion method
Description: implementing GetStringLiteralCompletions method for the
getCompletionsAtPositionAPI
Issue: #IBJX7A

Signed-off-by: Utku Enes GURSEL <utku.enes.gursel@h-partners.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -44,3 +44,7 @@ ets2panda_add_gtest(lsp_api_get_adjusted_location_test CPP_SOURCES
 ets2panda_add_gtest(lsp_api_test_find_references CPP_SOURCES
     find_references_test.cpp
 )
+
+ets2panda_add_gtest(lsp_api_slc_tests CPP_SOURCES
+    string_completions_test.cpp
+)
