[LSP-API]: Implement findRenameLocations
Description: Given a file and a position the function finds the token at that
position and where the token must be renamed in a given list of files.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBNDQI?from=project-issue
Testing: Added test cases for renaming classes, functions and class
members. Heavily depends on findReferences so it's mostly covered there.

Signed-off-by: Muhammet Fevzi Bayiroglu <muhammet.fevzi.bayiroglu@h-partners.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -20,6 +20,7 @@ set(ES2PANDA_LSP_SRC
   ./src/quick_info.cpp
   ./src/references.cpp
   ./src/get_adjusted_location.cpp
+  ./src/find_rename_locations.cpp
   ./src/find_references.cpp
   ./src/string_completions.cpp
   ./src/rename.cpp
