--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -42,6 +42,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/classifier.cpp",
     "src/completions.cpp",
     "src/find_references.cpp",
+    "src/find_rename_locations.cpp",
     "src/get_adjusted_location.cpp",
     "src/internal_api.cpp",
     "src/line_column_offset.cpp",
