[LSP API] GetCompilerOptionsDiagnostics
Issue:	https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBMOHJ
Signed-off-by: irfan-karatekin <irfan.karatekin1@huawei-partners.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -35,6 +35,7 @@ ets2panda_add_gtest(lsp_api_classifier_test CPP_SOURCES
 )
 
 ets2panda_add_gtest(lsp_api_diagnostics_test CPP_SOURCES
+    get_compiler_options_diagnostics_test.cpp
     get_diagnostics.cpp
 )
 
