Supports generate static declaration file
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBO75C
Signed-off-by: xuhangqi <xuhangqi@huawei.com>
Change-Id: I35d3eeac36b943eb8547ea69e7a36426f3068ac0

--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -166,6 +166,18 @@ options:
     description: Paths to evaluation mode (.abc) files, must be accessible
     delimiter: ":"
 
+- name: generate-decl
+  description: Input static file and generate static declaration files
+  sub_options:
+  - name: enabled
+    type: bool
+    default: false
+    description: Whether to enable static declaration file generation
+  - name: path
+    type: std::string
+    default: ""
+    description: Output path for generated static declaration files
+
 - name: thread
   type: int
   default: 0
