Fix allow setter implicit ret void
Issue:
[Bug]: Unexpected CTE when a setter declared without 'void'
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBP24D

Signed-off-by: lidongyao <738401275@qq.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -975,3 +975,7 @@ syntax:
 - name: UNEXPECTED_THIS
   id: 241
   message: "Unexpected 'this' keyword in non-receiver context."
+
+- name: SETTER_NO_RETURN_TYPE
+  id: 242
+  message: "Setter must not have return type even if it is void."
