--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -56,6 +56,10 @@ ets2panda_add_gtest(lsp_api_test_suggestion_diagnostics CPP_SOURCES
     suggestion_diagnostics_test.cpp
 )
 
+ets2panda_add_gtest(lsp_api_test_brace_matching CPP_SOURCES
+    brace_matching_test.cpp
+)
+
 ets2panda_add_gtest(lsp_api_completions_test CPP_SOURCES
     get_completions.cpp
 )
