--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -25,6 +25,8 @@ set(ES2PANDA_LSP_SRC
   ./src/rename.cpp
   ./src/suggestion_diagnostics.cpp
   ./src/brace_matching.cpp
+  ./src/services/services.cpp
+  ./src/services/utilities.cpp
 )
 
 panda_add_library(${LSP_LIB} SHARED ${ES2PANDA_LSP_SRC})
