Implement initializer block for namespace
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBPH1J?from=project-issue
Description: Initializer block is used in classes, packages, and namespaces, to ensure that all their variables and fields have valid initial values.
Reason: This PR is created to Implement initializer block for namespace.
Signed-off-by: xingshunxiang <xingshunxiang@huawei.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -22,6 +22,8 @@ defines:
     ref: ETS_GLOBAL
   - name: _$init$_
     ref: INIT_METHOD
+  - name: _$initializerBlockInit$_
+    ref: INITIALIZER_BLOCK_INIT
   - name: $_get
     ref: GET_INDEX_METHOD
   - name: $_set
