--- a/ets2panda/linter/tsconfig.json
+++ b/ets2panda/linter/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "CommonJS",
     "target": "ES6",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "removeComments": true,
