Handle 'this' param with accessor in class body
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBO3QT

Signed-off-by: xutianyi <452312890@qq.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -971,3 +971,7 @@ syntax:
 - name: PROHIBITED_ACCESS_MODIFIER_IN_AMBIENT_CLASS
   id: 240
   message: Methods or fields should not be decorated with {} in ambient class.
+
+- name: UNEXPECTED_THIS
+  id: 241
+  message: "Unexpected 'this' keyword in non-receiver context."
