Fix illegal private modifier in ambient class
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBM5QE?from=project-issue

Description：throw syntax error and modify the test file ambient_object_iterable.

Signed-off-by: luojunying1 <luojunying1@h-partners.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -967,3 +967,7 @@ syntax:
 - name: READONLY_TYPE_EXPECTED
   id: 239
   message: "Readonly<T> utility type expected but readonly<T> found."
+
+- name: PROHIBITED_ACCESS_MODIFIER_IN_AMBIENT_CLASS
+  id: 240
+  message: Methods or fields should not be decorated with {} in ambient class.
