Integrate declgen into build system
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBPU7X

Signed-off-by: Tao Wu <wutao185@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -1073,6 +1073,7 @@ ark_gen("gen") {
 # libes2panda does not include bytecode optimizer, because it is used in
 # libarkruntime, and conflict with JIT setup ensues
 libes2panda_public_sources = [
+  "declgen_ets2ts/declgenEts2Ts.cpp",
   "public/${LIB_NAME}.cpp",
   "util/generateBin.cpp",
   "util/options.cpp",
