--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -67,3 +67,7 @@ ets2panda_add_gtest(lsp_api_completions_test CPP_SOURCES
 ets2panda_add_gtest(lsp_api_gilap_test CPP_SOURCES
     get_implementation_location.cpp
 )
+
+ets2panda_add_gtest(lsp_api_lco_test CPP_SOURCES
+    line_column_offset_test.cpp
+)
