--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -44,6 +44,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/find_references.cpp",
     "src/get_adjusted_location.cpp",
     "src/internal_api.cpp",
+    "src/line_column_offset.cpp",
     "src/quick_info.cpp",
     "src/references.cpp",
     "src/rename.cpp",
