symlink path in dynamic paths arktsconfig
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBRCQ9

Change-Id: I0707697d677e7e9c88057f61174e1f51f3fd6ccf
Signed-off-by: Klimentieva <klimentieva.maria@h-partners.com>

--- a/ets2panda/util/diagnostic/arktsconfig_error.yaml
+++ b/ets2panda/util/diagnostic/arktsconfig_error.yaml
@@ -75,3 +75,7 @@ arkts_config_error:
 - name: INVALID_DESTINATION_FILE
   id: 16
   message: Invalid destination file
+
+- name: INVALID_DYNAMIC_PATH
+  id: 17
+  message: Invalid dynamic path '{}'
