--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -207,6 +207,7 @@ libes2panda_sources = [
   "compiler/lowering/ets/capturedVariables.cpp",
   "compiler/lowering/ets/constStringToCharLowering.cpp",
   "compiler/lowering/ets/constantExpressionLowering.cpp",
+  "compiler/lowering/ets/declareOverloadLowering.cpp",
   "compiler/lowering/ets/defaultParametersInConstructorLowering.cpp",
   "compiler/lowering/ets/defaultParametersLowering.cpp",
   "compiler/lowering/ets/enumLowering.cpp",
