Add VariableDeclaration CAPI test cases
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBOKBD

Reason:
  Build CAPI protection

Description:
  Add VariableDeclaration CAPI test cases aimed to build CAPI protection

Signed-off-by: tianlongdev <tianlong18@h-partners.com>

--- a/ets2panda/test/unit/CMakeLists.txt
+++ b/ets2panda/test/unit/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(dynamic)
 add_subdirectory(lowerings)
 add_subdirectory(public)
 add_subdirectory(plugin)
+add_subdirectory(plugin_ut)
 add_subdirectory(plugin_conversion_rule)
 add_subdirectory(arktsconfig-parser)
 add_subdirectory(annotations)
