Support methods in unions
* Union member now can be resolved to instance method (ETSFunctionType)
* Types constituting union should have only one common signature per
  method

Issue: https://gitee.com/openharmony/arkcompiler_runtime_core/issues/IBU3M0
Tests: ./runner.sh --astchecker -v short --build-dir $BUILD --processes
all --filter "union_method*"

Signed-off-by: Shimenkov Mikhail <shimenkov.mikhail@huawei-partners.com>
Change-Id: Ic079219f468f5267d6e79716446825ba7d8d31b1

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1110,3 +1110,7 @@ semantic:
 - name: TUPLEN_NOT_IMPLEMENTED
   id: 279
   message: "Tuple types with arity >16 are not yet implemented"
+
+- name: UNION_METHOD_SIGNATURE
+  id: 280
+  message: "Union constituent types should have only one common method signature."
