Support methods in unions
* Union member now can be resolved to instance method (ETSFunctionType)
* Types constituting union should have only one common signature per
  method

Issue: https://gitee.com/openharmony/arkcompiler_runtime_core/issues/IC0RFB
Tests: ./runner.sh --astchecker -v short --build-dir $BUILD --processes
all --filter "union_method*"

Change-Id: I4cfd8b8795778f90b49fcbab72fdd064741180fc
Signed-off-by: Shimenkov Mikhail <shimenkov.mikhail@huawei-partners.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1106,3 +1106,7 @@ semantic:
 - name: LOCAL_CLASS_NATIVE_METHOD
   id: 278
   message: "Local class '{}' shouldn't have native methods/constructors"
+
+- name: UNION_METHOD_SIGNATURE
+  id: 279
+  message: "Union constituent types should have only one common method signature."
