--- a/ets2panda/driver/build_system/package.json
+++ b/ets2panda/driver/build_system/package.json
@@ -8,9 +8,12 @@
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
     "build_debug": "npm run clean && tsc --sourceMap",
-    "generate_abc": "npm run build && node ./dist/entry.js test/demo_hap/build_config.json",
-    "run_abc": "./node_modules/libarkts/arkoala-arkts/node_modules/@panda/sdk/linux_host_tools/bin/ark --load-runtimes=ets --boot-panda-files=./node_modules/libarkts/arkoala-arkts/node_modules/@panda/sdk/ets/etsstdlib.abc dist/modules_static.abc entry.b.ETSGLOBAL::main",
-    "run": "npm run generate_abc && npm run run_abc"
+
+    "mixed_hap:gen_decl": "npm run build && node ./dist/entry.js test/demo_mix_hap/build_config_decl.json",
+    "mixed_hap:gen_abc": "node ./dist/entry.js test/demo_mix_hap/build_config.json",
+    "mixed_hap:run": "npm run mixed_hap:gen_decl && npm run mixed_hap:gen_abc",
+
+    "demo_hap:gen_abc": "npm run build && node ./dist/entry.js test/demo_hap/build_config.json"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
