Support tuple as rest parameter
Fixes #22692 and #20774 internal issues.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBW6FD

Change-Id: Ibd7520701afeba1fc4714479da1476fe7b76a84d
Signed-off-by: Gabor Aron Takacs <gabor.takacs@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -780,9 +780,9 @@ syntax:
   id: 192
   message: "Rest parameter cannot have the default value."
 
-- name: ONLY_ARRAY_FOR_REST
+- name: ONLY_ARRAY_OR_TUPLE_FOR_REST
   id: 193
-  message: "Rest parameter should be of an array type."
+  message: "Rest parameter should be either array or tuple type."
 
 - name: EXPLICIT_PARAM_TYPE
   id: 194
