--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -232,6 +232,7 @@ libes2panda_sources = [
   "compiler/lowering/ets/partialExportClassGen.cpp",
   "compiler/lowering/ets/promiseVoid.cpp",
   "compiler/lowering/ets/recordLowering.cpp",
+  "compiler/lowering/ets/restTupleLowering.cpp",
   "compiler/lowering/ets/setJumpTarget.cpp",
   "compiler/lowering/ets/spreadLowering.cpp",
   "compiler/lowering/ets/stringComparison.cpp",
