Support Function type and unsafeCall
Issue: https://gitee.com/openharmony/arkcompiler_runtime_core/issues/IBVTVN
Signed-off-by: Vsevolod Pukhov <pukhov.vsevolod1@huawei.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -344,6 +344,9 @@ builtins:
   - name: DoubleBox
     package: PKG_STD_CORE
     ref: BUILTIN_DOUBLE_BOX
+  - name: Function
+    package: PKG_STD_CORE
+    ref: BUILTIN_FUNCTION
 
   - name: Function0
     package: PKG_STD_CORE
